--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="google-site-verification" content="TLiG5PQfNSw7gvXybnjsvMCUe01ajt8HFgKE9RbSP1c" />
+    <meta name="google-site-verification" content="EASouuAIkEJgFVkKB3zawVwta6UzzNtzyBDnJttM4Z4" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
